# cortex

./: .env.example  .gitignore  CORTEX.md  Justfile  README.md  context-engine-research.md  pyproject.toml  requirements.txt
.cortex/: .gitignore  settings.json
.cortex/agent-memory/: README.md
.cortex/agents/: code-reviewer.md  plan-architect.md
.cortex/commands/: fix-issue.md  status.md
.cortex/output-styles/: concise.md  teaching.md
.cortex/rules/: agents.md  api-design.md  testing.md
.cortex/sessions/: 7c987fcd0804.json  7f3e0323d749.json  96416bc2ddc2.json  96fa8a4f6376.json  98bffb79490b.json  _index.json  e7a2e29667b1.json  f5f4a27afab3.json  fd1231dd788f.json
.cortex/skills/plan-review/: SKILL.md
.cortex/skills/security-review/: SKILL.md  checklist.md
contextengine/: __init__.py  _json.py  budget.py  catalog.py  cli.py  compaction.py  dashboard.py  dashboard_server.py  engine.py  router.py  streaming.py  tokenize.py  types.py
contextengine/adapters/: __init__.py  langchain.py  openai.py
contextengine/coordination/: __init__.py  coordinator.py  handoff.py
contextengine/llm/: __init__.py  anthropic.py  base.py  openai.py  registry.py
contextengine/mcp/: __init__.py  connector.py  pool.py  schema.py
contextengine/memory/: __init__.py  assembler.py  compactor.py  policy.py  query.py  store.py  types.py  writer.py
contextengine/server/: __init__.py  app.py  meta_tools.py
contextengine/telemetry/: __init__.py  recorder.py  sinks.py
cortex/: __init__.py  __main__.py  claude_code.py  cli.py  config.py  engine.py  main.py  models.py  run_agent.py  tmux_runner.py
cortex/agents/: __init__.py  ai_agent.py  base.py  design_agent.py  registry.py  test_writer_agent.py
cortex/context/: __init__.py  page_store.py  rag_bridge.py
cortex/mistakes/: __init__.py  tracker.py
cortex/permissions/: __init__.py  resolver.py
cortex/planner/: __init__.py  planner.py
cortex/scaffold/: __init__.py  init.py  templates.py
cortex/sessions/: __init__.py  manager.py  model.py
cortex/tui/: __init__.py  app.py
examples/: demo.py  demo_memory.py  demo_openai.py
tests/: fakes.py  test_agents.py  test_anthropic_tokenizer.py  test_assemble.py  test_async_anthropic_tokenizer.py  test_budget.py  test_catalog.py  test_cli.py  test_compaction.py  test_coordination.py  test_dashboard.py  test_dashboard_server.py  test_engine.py  test_engine_integration.py  test_json.py  test_langchain_adapter.py  test_llm.py  test_mcp_server.py  test_memory_assembler.py  test_memory_compactor.py  test_memory_query.py  test_memory_store.py  test_memory_writer.py  test_mistakes.py  test_models.py  test_openai_adapter.py  test_page_store.py  test_permissions.py  test_policy.py  test_process_turn.py  test_router.py  test_scaffold.py  test_schema.py  test_sessions.py  test_streaming.py  test_telemetry.py  test_tokenize.py  test_types.py
