[project]
name = "cortex"
version = "0.1.0"
description = "Intelligent Agent Orchestration System built on Anthropic's Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vishal Bende", email = "vishal.bende06@gmail.com" }]
keywords = ["ai", "agents", "orchestration", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.40.0",
    "textual>=0.80.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
]

[project.scripts]
cortex = "cortex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]

# ── uv configuration ────────────────────────────────────────────────
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
]

[tool.uv.sources]
# Pin to PyPI by default; override here for git/local deps
# pageindex = { git = "https://github.com/VectifyAI/PageIndex" }

# ── Tool configs ────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
