[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextengine"
version = "0.0.1"
description = "MCP-aware context orchestration for LLM agents — budget-packed tool routing via vectorless LLM traversal."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vishal Bende" }]
dependencies = [
    "mcp>=1.0",
    "anthropic>=0.40",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["contextengine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
